cc/y.output
Terminals unused in grammar

   LO
   HI


Grammar

    0 $accept: Program $end

    1 Program: %empty
    2        | Program FunctionDecl

    3 StmtList: Stmt ';'
    4         | StmtList Stmt ';'

    5 ExpList: %empty
    6        | Exp
    7        | ExpList ',' Exp

    8 beginparams: BEGINPARAMS

    9 endparams: ENDPARAMS

   10 FunctionDecl: FUNCTION ID ';' beginparams DeclList endparams BEGINLOCALS DeclList ENDLOCALS BEGINBODY StmtList ENDBODY

   11 Decl: ID ':' INTEGER
   12     | ID ':' ARRAY '[' NUMBER ']' OF INTEGER
   13     | ID ',' Decl

   14 DeclList: %empty
   15         | DeclList Decl ';'

   16 BoolExp: TRUE
   17        | FALSE
   18        | '(' BoolExp ')'
   19        | NOT BoolExp
   20        | BoolExp AND BoolExp
   21        | BoolExp OR BoolExp
   22        | Exp EQ Exp
   23        | Exp NE Exp
   24        | Exp GE Exp
   25        | Exp LE Exp
   26        | Exp '>' Exp
   27        | Exp '<' Exp

   28 Exp: ID
   29    | ID '[' Exp ']'
   30    | Exp '+' Exp
   31    | Exp '-' Exp
   32    | Exp '*' Exp
   33    | Exp '/' Exp
   34    | Exp '%' Exp
   35    | '-' Exp
   36    | NUMBER
   37    | '(' Exp ')'
   38    | ID '(' ExpList ')'

   39 ReadStmt: READ ID
   40         | READ ID '[' Exp ']'
   41         | ReadStmt ',' ID
   42         | ReadStmt ',' ID '[' Exp ']'

   43 WriteStmt: WRITE Exp
   44          | WriteStmt ',' Exp

   45 Stmt: ID ASSIGN Exp
   46     | ID '[' Exp ']' ASSIGN Exp
   47     | ReadStmt
   48     | WriteStmt
   49     | IF BoolExp THEN StmtList ELSE StmtList ENDIF
   50     | IF BoolExp THEN StmtList ENDIF

   51 $@1: %empty

   52 Stmt: WHILE BoolExp BEGINLOOP $@1 StmtList ENDLOOP

   53 $@2: %empty

   54 Stmt: DO BEGINLOOP $@2 StmtList ENDLOOP WHILE BoolExp
   55     | CONTINUE
   56     | RETURN Exp


Terminals, with rules where they appear

$end (0) 0
'%' (37) 34
'(' (40) 18 37 38
')' (41) 18 37 38
'*' (42) 32
'+' (43) 30
',' (44) 7 13 41 42 44
'-' (45) 31 35
'/' (47) 33
':' (58) 11 12
';' (59) 3 4 10 15
'<' (60) 27
'>' (62) 26
'[' (91) 12 29 40 42 46
']' (93) 12 29 40 42 46
error (256)
LO (258)
FUNCTION (259) 10
BEGINPARAMS (260) 8
ENDPARAMS (261) 9
BEGINLOCALS (262) 10
ENDLOCALS (263) 10
BEGINBODY (264) 10
ENDBODY (265) 10
ARRAY (266) 12
OF (267) 12
IF (268) 49 50
THEN (269) 49 50
ENDIF (270) 49 50
ELSE (271) 49
WHILE (272) 52 54
BEGINLOOP (273) 52 54
ENDLOOP (274) 52 54
DO (275) 54
READ (276) 39 40
WRITE (277) 43
CONTINUE (278) 55
RETURN (279) 56
INTEGER (280) 11 12
NUMBER (281) 12 36
ID (282) 10 11 12 13 28 29 38 39 40 41 42 45 46
TRUE (283) 16
FALSE (284) 17
ASSIGN (285) 45 46
OR (286) 21
AND (287) 20
NOT (288) 19
NE (289) 23
EQ (290) 22
LE (291) 25
GE (292) 24
HI (293)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
Program (54)
    on left: 1 2, on right: 0 2
StmtList (55)
    on left: 3 4, on right: 4 10 49 50 52 54
ExpList (56)
    on left: 5 6 7, on right: 7 38
beginparams (57)
    on left: 8, on right: 10
endparams (58)
    on left: 9, on right: 10
FunctionDecl (59)
    on left: 10, on right: 2
Decl (60)
    on left: 11 12 13, on right: 13 15
DeclList (61)
    on left: 14 15, on right: 10 15
BoolExp (62)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27, on right: 18 19 20
    21 49 50 52 54
Exp (63)
    on left: 28 29 30 31 32 33 34 35 36 37 38, on right: 6 7 22 23
    24 25 26 27 29 30 31 32 33 34 35 37 40 42 43 44 45 46 56
ReadStmt (64)
    on left: 39 40 41 42, on right: 41 42 47
WriteStmt (65)
    on left: 43 44, on right: 44 48
Stmt (66)
    on left: 45 46 47 48 49 50 52 54 55 56, on right: 3 4
$@1 (67)
    on left: 51, on right: 52
$@2 (68)
    on left: 53, on right: 54


State 0

    0 $accept: . Program $end

    $default  reduce using rule 1 (Program)

    Program  go to state 1


State 1

    0 $accept: Program . $end
    2 Program: Program . FunctionDecl

    $end      shift, and go to state 2
    FUNCTION  shift, and go to state 3

    FunctionDecl  go to state 4


State 2

    0 $accept: Program $end .

    $default  accept


State 3

   10 FunctionDecl: FUNCTION . ID ';' beginparams DeclList endparams BEGINLOCALS DeclList ENDLOCALS BEGINBODY StmtList ENDBODY

    ID  shift, and go to state 5


State 4

    2 Program: Program FunctionDecl .

    $default  reduce using rule 2 (Program)


State 5

   10 FunctionDecl: FUNCTION ID . ';' beginparams DeclList endparams BEGINLOCALS DeclList ENDLOCALS BEGINBODY StmtList ENDBODY

    ';'  shift, and go to state 6


State 6

   10 FunctionDecl: FUNCTION ID ';' . beginparams DeclList endparams BEGINLOCALS DeclList ENDLOCALS BEGINBODY StmtList ENDBODY

    BEGINPARAMS  shift, and go to state 7

    beginparams  go to state 8


State 7

    8 beginparams: BEGINPARAMS .

    $default  reduce using rule 8 (beginparams)


State 8

   10 FunctionDecl: FUNCTION ID ';' beginparams . DeclList endparams BEGINLOCALS DeclList ENDLOCALS BEGINBODY StmtList ENDBODY

    $default  reduce using rule 14 (DeclList)

    DeclList  go to state 9


State 9

   10 FunctionDecl: FUNCTION ID ';' beginparams DeclList . endparams BEGINLOCALS DeclList ENDLOCALS BEGINBODY StmtList ENDBODY
   15 DeclList: DeclList . Decl ';'

    ENDPARAMS  shift, and go to state 10
    ID         shift, and go to state 11

    endparams  go to state 12
    Decl       go to state 13


State 10

    9 endparams: ENDPARAMS .

    $default  reduce using rule 9 (endparams)


State 11

   11 Decl: ID . ':' INTEGER
   12     | ID . ':' ARRAY '[' NUMBER ']' OF INTEGER
   13     | ID . ',' Decl

    ':'  shift, and go to state 14
    ','  shift, and go to state 15


State 12

   10 FunctionDecl: FUNCTION ID ';' beginparams DeclList endparams . BEGINLOCALS DeclList ENDLOCALS BEGINBODY StmtList ENDBODY

    BEGINLOCALS  shift, and go to state 16


State 13

   15 DeclList: DeclList Decl . ';'

    ';'  shift, and go to state 17


State 14

   11 Decl: ID ':' . INTEGER
   12     | ID ':' . ARRAY '[' NUMBER ']' OF INTEGER

    ARRAY    shift, and go to state 18
    INTEGER  shift, and go to state 19


State 15

   13 Decl: ID ',' . Decl

    ID  shift, and go to state 11

    Decl  go to state 20


State 16

   10 FunctionDecl: FUNCTION ID ';' beginparams DeclList endparams BEGINLOCALS . DeclList ENDLOCALS BEGINBODY StmtList ENDBODY

    $default  reduce using rule 14 (DeclList)

    DeclList  go to state 21


State 17

   15 DeclList: DeclList Decl ';' .

    $default  reduce using rule 15 (DeclList)


State 18

   12 Decl: ID ':' ARRAY . '[' NUMBER ']' OF INTEGER

    '['  shift, and go to state 22


State 19

   11 Decl: ID ':' INTEGER .

    $default  reduce using rule 11 (Decl)


State 20

   13 Decl: ID ',' Decl .

    $default  reduce using rule 13 (Decl)


State 21

   10 FunctionDecl: FUNCTION ID ';' beginparams DeclList endparams BEGINLOCALS DeclList . ENDLOCALS BEGINBODY StmtList ENDBODY
   15 DeclList: DeclList . Decl ';'

    ENDLOCALS  shift, and go to state 23
    ID         shift, and go to state 11

    Decl  go to state 13


State 22

   12 Decl: ID ':' ARRAY '[' . NUMBER ']' OF INTEGER

    NUMBER  shift, and go to state 24


State 23

   10 FunctionDecl: FUNCTION ID ';' beginparams DeclList endparams BEGINLOCALS DeclList ENDLOCALS . BEGINBODY StmtList ENDBODY

    BEGINBODY  shift, and go to state 25


State 24

   12 Decl: ID ':' ARRAY '[' NUMBER . ']' OF INTEGER

    ']'  shift, and go to state 26


State 25

   10 FunctionDecl: FUNCTION ID ';' beginparams DeclList endparams BEGINLOCALS DeclList ENDLOCALS BEGINBODY . StmtList ENDBODY

    IF        shift, and go to state 27
    WHILE     shift, and go to state 28
    DO        shift, and go to state 29
    READ      shift, and go to state 30
    WRITE     shift, and go to state 31
    CONTINUE  shift, and go to state 32
    RETURN    shift, and go to state 33
    ID        shift, and go to state 34

    StmtList   go to state 35
    ReadStmt   go to state 36
    WriteStmt  go to state 37
    Stmt       go to state 38


State 26

   12 Decl: ID ':' ARRAY '[' NUMBER ']' . OF INTEGER

    OF  shift, and go to state 39


State 27

   49 Stmt: IF . BoolExp THEN StmtList ELSE StmtList ENDIF
   50     | IF . BoolExp THEN StmtList ENDIF

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    TRUE    shift, and go to state 42
    FALSE   shift, and go to state 43
    NOT     shift, and go to state 44
    '-'     shift, and go to state 45
    '('     shift, and go to state 46

    BoolExp  go to state 47
    Exp      go to state 48


State 28

   52 Stmt: WHILE . BoolExp BEGINLOOP $@1 StmtList ENDLOOP

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    TRUE    shift, and go to state 42
    FALSE   shift, and go to state 43
    NOT     shift, and go to state 44
    '-'     shift, and go to state 45
    '('     shift, and go to state 46

    BoolExp  go to state 49
    Exp      go to state 48


State 29

   54 Stmt: DO . BEGINLOOP $@2 StmtList ENDLOOP WHILE BoolExp

    BEGINLOOP  shift, and go to state 50


State 30

   39 ReadStmt: READ . ID
   40         | READ . ID '[' Exp ']'

    ID  shift, and go to state 51


State 31

   43 WriteStmt: WRITE . Exp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 53


State 32

   55 Stmt: CONTINUE .

    $default  reduce using rule 55 (Stmt)


State 33

   56 Stmt: RETURN . Exp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 54


State 34

   45 Stmt: ID . ASSIGN Exp
   46     | ID . '[' Exp ']' ASSIGN Exp

    ASSIGN  shift, and go to state 55
    '['     shift, and go to state 56


State 35

    4 StmtList: StmtList . Stmt ';'
   10 FunctionDecl: FUNCTION ID ';' beginparams DeclList endparams BEGINLOCALS DeclList ENDLOCALS BEGINBODY StmtList . ENDBODY

    ENDBODY   shift, and go to state 57
    IF        shift, and go to state 27
    WHILE     shift, and go to state 28
    DO        shift, and go to state 29
    READ      shift, and go to state 30
    WRITE     shift, and go to state 31
    CONTINUE  shift, and go to state 32
    RETURN    shift, and go to state 33
    ID        shift, and go to state 34

    ReadStmt   go to state 36
    WriteStmt  go to state 37
    Stmt       go to state 58


State 36

   41 ReadStmt: ReadStmt . ',' ID
   42         | ReadStmt . ',' ID '[' Exp ']'
   47 Stmt: ReadStmt .

    ','  shift, and go to state 59

    $default  reduce using rule 47 (Stmt)


State 37

   44 WriteStmt: WriteStmt . ',' Exp
   48 Stmt: WriteStmt .

    ','  shift, and go to state 60

    $default  reduce using rule 48 (Stmt)


State 38

    3 StmtList: Stmt . ';'

    ';'  shift, and go to state 61


State 39

   12 Decl: ID ':' ARRAY '[' NUMBER ']' OF . INTEGER

    INTEGER  shift, and go to state 62


State 40

   36 Exp: NUMBER .

    $default  reduce using rule 36 (Exp)


State 41

   28 Exp: ID .
   29    | ID . '[' Exp ']'
   38    | ID . '(' ExpList ')'

    '('  shift, and go to state 63
    '['  shift, and go to state 64

    $default  reduce using rule 28 (Exp)


State 42

   16 BoolExp: TRUE .

    $default  reduce using rule 16 (BoolExp)


State 43

   17 BoolExp: FALSE .

    $default  reduce using rule 17 (BoolExp)


State 44

   19 BoolExp: NOT . BoolExp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    TRUE    shift, and go to state 42
    FALSE   shift, and go to state 43
    NOT     shift, and go to state 44
    '-'     shift, and go to state 45
    '('     shift, and go to state 46

    BoolExp  go to state 65
    Exp      go to state 48


State 45

   35 Exp: '-' . Exp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 66


State 46

   18 BoolExp: '(' . BoolExp ')'
   37 Exp: '(' . Exp ')'

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    TRUE    shift, and go to state 42
    FALSE   shift, and go to state 43
    NOT     shift, and go to state 44
    '-'     shift, and go to state 45
    '('     shift, and go to state 46

    BoolExp  go to state 67
    Exp      go to state 68


State 47

   20 BoolExp: BoolExp . AND BoolExp
   21        | BoolExp . OR BoolExp
   49 Stmt: IF BoolExp . THEN StmtList ELSE StmtList ENDIF
   50     | IF BoolExp . THEN StmtList ENDIF

    THEN  shift, and go to state 69
    OR    shift, and go to state 70
    AND   shift, and go to state 71


State 48

   22 BoolExp: Exp . EQ Exp
   23        | Exp . NE Exp
   24        | Exp . GE Exp
   25        | Exp . LE Exp
   26        | Exp . '>' Exp
   27        | Exp . '<' Exp
   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp

    NE   shift, and go to state 72
    EQ   shift, and go to state 73
    LE   shift, and go to state 74
    GE   shift, and go to state 75
    '>'  shift, and go to state 76
    '<'  shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82


State 49

   20 BoolExp: BoolExp . AND BoolExp
   21        | BoolExp . OR BoolExp
   52 Stmt: WHILE BoolExp . BEGINLOOP $@1 StmtList ENDLOOP

    BEGINLOOP  shift, and go to state 83
    OR         shift, and go to state 70
    AND        shift, and go to state 71


State 50

   54 Stmt: DO BEGINLOOP . $@2 StmtList ENDLOOP WHILE BoolExp

    $default  reduce using rule 53 ($@2)

    $@2  go to state 84


State 51

   39 ReadStmt: READ ID .
   40         | READ ID . '[' Exp ']'

    '['  shift, and go to state 85

    $default  reduce using rule 39 (ReadStmt)


State 52

   37 Exp: '(' . Exp ')'

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 86


State 53

   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp
   43 WriteStmt: WRITE Exp .

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 43 (WriteStmt)


State 54

   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp
   56 Stmt: RETURN Exp .

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 56 (Stmt)


State 55

   45 Stmt: ID ASSIGN . Exp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 87


State 56

   46 Stmt: ID '[' . Exp ']' ASSIGN Exp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 88


State 57

   10 FunctionDecl: FUNCTION ID ';' beginparams DeclList endparams BEGINLOCALS DeclList ENDLOCALS BEGINBODY StmtList ENDBODY .

    $default  reduce using rule 10 (FunctionDecl)


State 58

    4 StmtList: StmtList Stmt . ';'

    ';'  shift, and go to state 89


State 59

   41 ReadStmt: ReadStmt ',' . ID
   42         | ReadStmt ',' . ID '[' Exp ']'

    ID  shift, and go to state 90


State 60

   44 WriteStmt: WriteStmt ',' . Exp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 91


State 61

    3 StmtList: Stmt ';' .

    $default  reduce using rule 3 (StmtList)


State 62

   12 Decl: ID ':' ARRAY '[' NUMBER ']' OF INTEGER .

    $default  reduce using rule 12 (Decl)


State 63

   38 Exp: ID '(' . ExpList ')'

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    $default  reduce using rule 5 (ExpList)

    ExpList  go to state 92
    Exp      go to state 93


State 64

   29 Exp: ID '[' . Exp ']'

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 94


State 65

   19 BoolExp: NOT BoolExp .
   20        | BoolExp . AND BoolExp
   21        | BoolExp . OR BoolExp

    $default  reduce using rule 19 (BoolExp)


State 66

   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp
   35    | '-' Exp .

    $default  reduce using rule 35 (Exp)


State 67

   18 BoolExp: '(' BoolExp . ')'
   20        | BoolExp . AND BoolExp
   21        | BoolExp . OR BoolExp

    OR   shift, and go to state 70
    AND  shift, and go to state 71
    ')'  shift, and go to state 95


State 68

   22 BoolExp: Exp . EQ Exp
   23        | Exp . NE Exp
   24        | Exp . GE Exp
   25        | Exp . LE Exp
   26        | Exp . '>' Exp
   27        | Exp . '<' Exp
   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp
   37    | '(' Exp . ')'

    NE   shift, and go to state 72
    EQ   shift, and go to state 73
    LE   shift, and go to state 74
    GE   shift, and go to state 75
    '>'  shift, and go to state 76
    '<'  shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82
    ')'  shift, and go to state 96


State 69

   49 Stmt: IF BoolExp THEN . StmtList ELSE StmtList ENDIF
   50     | IF BoolExp THEN . StmtList ENDIF

    IF        shift, and go to state 27
    WHILE     shift, and go to state 28
    DO        shift, and go to state 29
    READ      shift, and go to state 30
    WRITE     shift, and go to state 31
    CONTINUE  shift, and go to state 32
    RETURN    shift, and go to state 33
    ID        shift, and go to state 34

    StmtList   go to state 97
    ReadStmt   go to state 36
    WriteStmt  go to state 37
    Stmt       go to state 38


State 70

   21 BoolExp: BoolExp OR . BoolExp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    TRUE    shift, and go to state 42
    FALSE   shift, and go to state 43
    NOT     shift, and go to state 44
    '-'     shift, and go to state 45
    '('     shift, and go to state 46

    BoolExp  go to state 98
    Exp      go to state 48


State 71

   20 BoolExp: BoolExp AND . BoolExp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    TRUE    shift, and go to state 42
    FALSE   shift, and go to state 43
    NOT     shift, and go to state 44
    '-'     shift, and go to state 45
    '('     shift, and go to state 46

    BoolExp  go to state 99
    Exp      go to state 48


State 72

   23 BoolExp: Exp NE . Exp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 100


State 73

   22 BoolExp: Exp EQ . Exp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 101


State 74

   25 BoolExp: Exp LE . Exp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 102


State 75

   24 BoolExp: Exp GE . Exp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 103


State 76

   26 BoolExp: Exp '>' . Exp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 104


State 77

   27 BoolExp: Exp '<' . Exp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 105


State 78

   30 Exp: Exp '+' . Exp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 106


State 79

   31 Exp: Exp '-' . Exp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 107


State 80

   32 Exp: Exp '*' . Exp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 108


State 81

   33 Exp: Exp '/' . Exp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 109


State 82

   34 Exp: Exp '%' . Exp

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 110


State 83

   52 Stmt: WHILE BoolExp BEGINLOOP . $@1 StmtList ENDLOOP

    $default  reduce using rule 51 ($@1)

    $@1  go to state 111


State 84

   54 Stmt: DO BEGINLOOP $@2 . StmtList ENDLOOP WHILE BoolExp

    IF        shift, and go to state 27
    WHILE     shift, and go to state 28
    DO        shift, and go to state 29
    READ      shift, and go to state 30
    WRITE     shift, and go to state 31
    CONTINUE  shift, and go to state 32
    RETURN    shift, and go to state 33
    ID        shift, and go to state 34

    StmtList   go to state 112
    ReadStmt   go to state 36
    WriteStmt  go to state 37
    Stmt       go to state 38


State 85

   40 ReadStmt: READ ID '[' . Exp ']'

    NUMBER  shift, and go to state 40
    ID      shift, and go to state 41
    '-'     shift, and go to state 45
    '('     shift, and go to state 52

    Exp  go to state 113


State 86

   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp
   37    | '(' Exp . ')'

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82
    ')'  shift, and go to state 96


State 87

   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp
   45 Stmt: ID ASSIGN Exp .

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 45 (Stmt)


State 88

   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp
   46 Stmt: ID '[' Exp . ']' ASSIGN Exp

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82
    ']'  shift, and go to state 114


State 89

    4 StmtList: StmtList Stmt ';' .

    $default  reduce using rule 4 (StmtList)


State 90

   41 ReadStmt: ReadStmt ',' ID .
   42         | ReadStmt ',' ID . '[' Exp ']'

    '['  shift, and go to state 115

    $default  reduce using rule 41 (ReadStmt)


State 91

   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp
   44 WriteStmt: WriteStmt ',' Exp .

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 44 (WriteStmt)


State 92

    7 ExpList: ExpList . ',' Exp
   38 Exp: ID '(' ExpList . ')'

    ','  shift, and go to state 116
    ')'  shift, and go to state 117


State 93

    6 ExpList: Exp .
   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 6 (ExpList)


State 94

   29 Exp: ID '[' Exp . ']'
   30    | Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82
    ']'  shift, and go to state 118


State 95

   18 BoolExp: '(' BoolExp ')' .

    $default  reduce using rule 18 (BoolExp)


State 96

   37 Exp: '(' Exp ')' .

    $default  reduce using rule 37 (Exp)


State 97

    4 StmtList: StmtList . Stmt ';'
   49 Stmt: IF BoolExp THEN StmtList . ELSE StmtList ENDIF
   50     | IF BoolExp THEN StmtList . ENDIF

    IF        shift, and go to state 27
    ENDIF     shift, and go to state 119
    ELSE      shift, and go to state 120
    WHILE     shift, and go to state 28
    DO        shift, and go to state 29
    READ      shift, and go to state 30
    WRITE     shift, and go to state 31
    CONTINUE  shift, and go to state 32
    RETURN    shift, and go to state 33
    ID        shift, and go to state 34

    ReadStmt   go to state 36
    WriteStmt  go to state 37
    Stmt       go to state 58


State 98

   20 BoolExp: BoolExp . AND BoolExp
   21        | BoolExp . OR BoolExp
   21        | BoolExp OR BoolExp .

    AND  shift, and go to state 71

    $default  reduce using rule 21 (BoolExp)


State 99

   20 BoolExp: BoolExp . AND BoolExp
   20        | BoolExp AND BoolExp .
   21        | BoolExp . OR BoolExp

    $default  reduce using rule 20 (BoolExp)


State 100

   23 BoolExp: Exp NE Exp .
   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 23 (BoolExp)


State 101

   22 BoolExp: Exp EQ Exp .
   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 22 (BoolExp)


State 102

   25 BoolExp: Exp LE Exp .
   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 25 (BoolExp)


State 103

   24 BoolExp: Exp GE Exp .
   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 24 (BoolExp)


State 104

   26 BoolExp: Exp '>' Exp .
   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 26 (BoolExp)


State 105

   27 BoolExp: Exp '<' Exp .
   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 27 (BoolExp)


State 106

   30 Exp: Exp . '+' Exp
   30    | Exp '+' Exp .
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp

    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 30 (Exp)


State 107

   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   31    | Exp '-' Exp .
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp

    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 31 (Exp)


State 108

   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   32    | Exp '*' Exp .
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp

    $default  reduce using rule 32 (Exp)


State 109

   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   33    | Exp '/' Exp .
   34    | Exp . '%' Exp

    $default  reduce using rule 33 (Exp)


State 110

   30 Exp: Exp . '+' Exp
   31    | Exp . '-' Exp
   32    | Exp . '*' Exp
   33    | Exp . '/' Exp
   34    | Exp . '%' Exp
   34    | Exp '%' Exp .

    $default  reduce using rule 34 (Exp)


State 111
